Set v0.3 TOC to fixed position so it's always visible. Also, added a small README to aid new contributors.

--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,7 @@ img {
   color: rgb(85, 85, 85);
   padding-bottom: 20px;
   padding-top: 10px;
+  position: fixed; /* so it's accessible even if user scrolls */ 
 }
 
 .highlight {
@@ -174,7 +175,7 @@ img {
 }
 
 .article {
-  padding-left: 50px;
+  padding-left: 150px; /* 100 px for drawer, 50px for extra space*/
   padding-bottom: 200px;
 }
 
